dataset1235/2025-2/610742602/users/1997662715/executions/677928262_1626817775.log
== RUN (2025-08-28 14:36:26)
-- CODE: 
import math
r = float(input())

area = math. pi * r**2
volume = ( 4 / 3 ) * math.pi * r ** 3

print(round(area, 3 ))
prnt(round(volume3 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 14:38:18)
-- CODE: 
import math
r = float(input())

area = math. pi * r**2
volume =  (4 / 3) * math.pi * r ** 3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 14:37:24)
-- CODE: 
import math
r = float(input())

area = math. pi * r**2
volume =  (4 / 3) * math.pi * r ** 3

print(round(area, 3 ))
prnt(round(volume3 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 14:36:29)
-- CODE: 
import math
r = float(input())

area = math. pi * r**2
volume = ( 4 / 3 ) * math.pi * r ** 3

print(round(area, 3 ))
prnt(round(volume3 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 14:37:57)
-- CODE: 
import math
r = float(input())

area = math. pi * r**2
volume =  (4 / 3) * math.pi * r ** 3

print(round(area, 3))
prnt(round(volume, 3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 14:37:42)
-- CODE: 
import math
r = float(input())

area = math. pi * r**2
volume =  (4 / 3) * math.pi * r ** 3

print(round(area, 3 ))
prnt(round(volume, 3 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 14:37:27)
-- CODE: 
import math
r = float(input())

area = math. pi * r**2
volume =  (4 / 3) * math.pi * r ** 3

print(round(area, 3 ))
prnt(round(volume3 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 14:37:55)
-- CODE: 
import math
r = float(input())

area = math. pi * r**2
volume =  (4 / 3) * math.pi * r ** 3

print(round(area, 3))
prnt(round(volume, 3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 14:37:40)
-- CODE: 
import math
r = float(input())

area = math. pi * r**2
volume =  (4 / 3) * math.pi * r ** 3

print(round(area, 3 ))
prnt(round(volume, 3 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prnt(round(volume, 3 ))
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 14:38:14)
-- CODE: 
import math
r = float(input())

area = math. pi * r**2
volume =  (4 / 3) * math.pi * r ** 3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 14:38:38)
-- CODE: 
import math
r = float(input())

area = math.pi * r**2
volume =  (4 / 3) * math.pi * r ** 3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
